--- a/layouts/partials/contact-form.html
+++ b/layouts/partials/contact-form.html
@@ -6,7 +6,7 @@
       <p>{{ .message | markdownify }}</p>
       {{ end }}
     </div>
-    <form name="contact-form" netlify-honeypot="_gotcha" action="thank-you" netlify>
+    <form name="contact-form" netlify-honeypot="_gotcha" action="thank-you" data-netlify-recaptcha="true" netlify>
       <div class="row">
 	<div class="col-md-6">
 	  <div class="form-group">
@@ -38,6 +38,7 @@
 	    <button type="submit" class="btn btn-primary btn-outline" value="Send">{{ with .Site.Params.contact }}{{ .button_text }}{{ end }}</button>
 	    <!-- <input type="submit" name="submit" value="Send message" class="btn btn-primary btn-outline"> -->
 	  </div>
+	  <div data-netlify-recaptcha="true"></div>
 	</div>
       </div>
 
